
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ConsoleG"
version = "0.1.0"
authors = [
  {name = "Setkove", email = "alatovmaga@gmail.com"},
]
description = "The Graphics Library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["Tkinter"]
dependencies = [
    # "requests>=2.25.0",  # зависимости, если есть
]

[project.urls]
"Homepage" = "https://github.com/username/my-library"
"Bug Tracker" = "https://github.com/username/my-library/issues"